Cleaning up; Fixing Sidebar not showing up on web version; Reminder - TEST WEB VERSION TOO DUMMY!

--- a/css/scss/_setup/_initiative-bar.scss
+++ b/css/scss/_setup/_initiative-bar.scss
@@ -39,6 +39,7 @@
   .mg-ini-side-wrap {
     height: 100%;
     width: 100%;
+    overflow: hidden;
     pointer-events: auto;
     transition: transform 280ms ease;
     display: flex;
